# S-M-LASYON_11

./: 11_BOYUTLU_EVREN_SISTEM_ANALIZ.md  AI_KNOWLEDGE_BASE_11.md  AI_PERSONAL_ASSESSMENT.md  AI_RAPORU.md  ALL_NEW_MODULES.py  ANTIGRAVITY_VALIDATION_REPORT.txt  BRANCH_MERGE_REPORT.txt  COLAB_MEGA_ANALYSIS.ipynb  DARK_ENERGY_MATTER_DISCOVERY.md  DEPLOYMENT_COMPLETE_SUMMARY.txt  DERIN_ANALIZ_VE_NASA_ENTEGRASYON_RAPORU.md  DERIN_ARASTIRMA_RAPORU_KAR_TOPU_V5.md  DETAYLI_KOD_SONUCLARI_VE_DUSUNCELER.md  FINAL_AI_ANALYSIS_REPORT.txt  FINAL_ENTEGRASYON_RAPORU.md  FINAL_INTEGRATION_REPORT.md  FINAL_REPORT.md  FINAL_REPORT.txt  FINAL_SENTEZ_RAPORU.md  FINAL_SISTEM_RAPORU_2026-03-02.txt  GITHUB_YENI_KAYNAKLAR_OZETI.txt  GROK_AI_VALIDATION_REPORT.txt  GROK_HIDDEN_NARRATIVE_REVELATION.txt  GROK_INTEGRATION_FINAL_REPORT.txt  HIGGS_ANALYSIS.md  INTEGRATION_GUIDE.md  KAREKÖK 11.docx  KAR_TOPU_ANTIGRAVITY_SENTEZ-1.md  KAR_TOPU_ANTIGRAVITY_SENTEZ-2.md  KAR_TOPU_ANTIGRAVITY_SENTEZ-3.md  KAR_TOPU_ANTIGRAVITY_SENTEZ-5.md  KAR_TOPU_ANTIGRAVITY_SENTEZ-6.md  KAR_TOPU_ANTIGRAVITY_SENTEZ-7.md  KAR_TOPU_V5_V2_INTEGRATION_REPORT.txt  KAR_TOPU_V5_V3_PHASE3_REPORT.md  LICENSE  Modul_Grand_88_Unification.py  NEW_MODULES_PHASE2.md  NEW_MODULE_SPECS.md  OTONOM_AI_VERI_PAKT.txt  (+74 more)
.Jules/: palette.md
.github/: copilot-instructions.md
s_m_lasyon_11.egg-info/: PKG-INFO  entry_points.txt  requires.txt  top_level.txt
templates/: index.html
